--- a/app/globals.css
+++ b/app/globals.css
@@ -11,13 +11,13 @@ body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Times New Roman', Times, Georgia, 'Liberation Serif', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #ffffff;
   color: #000000;
-  line-height: 1.6;
-  font-size: 16px;
+  line-height: 1.8;
+  font-size: 12pt;
 }
 
 /* Navigation */
@@ -105,34 +105,93 @@ body {
   text-align: left;
 }
 
-/* Article */
+/* Article - Research Paper Style */
 .article {
   color: #000000;
   line-height: 1.8;
+  text-align: justify;
+  font-family: 'Times New Roman', Times, Georgia, 'Liberation Serif', serif;
 }
 
 .article h3 {
-  font-size: 1.75rem;
-  font-weight: 400;
-  margin-bottom: 0.5rem;
-  line-height: 1.3;
+  font-size: 14pt;
+  font-weight: bold;
+  margin-top: 2em;
+  margin-bottom: 1em;
+  line-height: 1.4;
+  text-align: left;
+  page-break-after: avoid;
+}
+
+.article h4 {
+  font-size: 12pt;
+  font-weight: bold;
+  margin-top: 1.5em;
+  margin-bottom: 0.75em;
+  line-height: 1.4;
+  text-align: left;
+  page-break-after: avoid;
 }
 
 .article p {
-  margin-bottom: 1.5rem;
-  font-size: 1rem;
+  margin-bottom: 1em;
+  font-size: 12pt;
+  text-indent: 0.5in;
+  text-align: justify;
+}
+
+.article p:first-of-type,
+.article h3 + p,
+.article h4 + p {
+  text-indent: 0;
 }
 
 .article p:first-of-type {
-  color: #666666;
-  font-size: 0.95rem;
-  margin-bottom: 2rem;
+  color: #000000;
+  font-size: 12pt;
+  margin-bottom: 1.5em;
+  font-style: italic;
+}
+
+.article ul,
+.article ol {
+  margin-bottom: 1em;
+  padding-left: 1.5em;
+  font-size: 12pt;
+}
+
+.article li {
+  margin-bottom: 0.5em;
+  line-height: 1.8;
+}
+
+.article strong {
+  font-weight: bold;
+}
+
+.article em {
+  font-style: italic;
 }
 
 .article img {
   max-width: 100%;
   height: auto;
-  margin: 2rem 0;
+  margin: 2em auto;
+  display: block;
+  page-break-inside: avoid;
+}
+
+.article figure {
+  margin: 2em 0;
+  text-align: center;
+  page-break-inside: avoid;
+}
+
+.article figcaption {
+  font-size: 10pt;
+  margin-top: 0.5em;
+  font-style: italic;
+  text-align: center;
 }
 
 /* Responsive design */
